test/zinc_source/compile_errors/modules/05_import_cycle.zn
// expected-error: cyclic imports are not supported
import compile_errors/modules/_cycle/a

fn main() {
    print(ping())
}
